--- a/401.md
+++ b/401.md
@@ -13,12 +13,12 @@ search_exclude: true
     margin: 30px 0;
     font-size: 4em;
     line-height: 1;
-    letter-spacing: -1px;
+    letter-spacing: -1px; 
   }
 </style>
 
 <div class="container">
   <h1>401</h1>
   <p><strong>Unauthorized :(</strong></p>
-  <p>You are not authorized to view this page. Please log in with the appropriate credentials.</p>
+  <p>You are not authorized to view this page. Please log in with the appropriate credentials. Thank you</p>
 </div>
