--- a/401.md
+++ b/401.md
@@ -19,6 +19,6 @@ search_exclude: true
 
 <div class="container">
   <h1>401</h1>
-  <p><strong>Unauthorized :(</strong></p>
+  <p><strong>Unauthorized</strong></p>
   <p>You are not authorized to view this page. Please log in with the appropriate credentials. Thank you</p>
 </div>
